added pom.xml for Master, item-registration and axon-commons, added pricing models excel